# text_example

./: CMakeLists.txt  main.cpp  shader.h  text.h  utils.h  window.h
biuld/: CMakeCache.txt  Makefile  cmake_install.cmake  text  text.fs  text.vs
